Tidy up and api document
